--- a/css/viz.css
+++ b/css/viz.css
@@ -1,302 +1,406 @@
 @charset "utf-8";
-
-html { overflow-y: auto; } /*override common.css*/
-
-/*top-bar right*/
+html {
+    overflow-y: auto;
+}
 #mode-menu {
-	z-index: 1001;
-	float: right;
-	background: black;
-	font-size: 14px;
-	width: 160px;
-	position: relative;
+    z-index: 1001;
+    float: right;
+    background: #000;
+    font-size: 14px;
+    width: 160px;
+    position: relative;
 }
-	#mode-button { cursor: pointer; padding: 11px 15px; }
-		#mode-button img { /*down arrow*/
-			position: absolute;
-			top: 18px;
-			right: 15px;
-			display: inline-block;
-		}
-	#other-modes {
-		position: absolute;
-		width: 160px;
-		background: black;
-		display: none;
-	}
-	#other-modes a {
-		display: block;
-		padding: 8px 15px;
-	}
-
+#mode-button {
+    cursor: pointer;
+    padding: 10px 15px;
+}
+#mode-button img {
+    position: absolute;
+    top: 18px;
+    right: 15px;
+    display: inline-block;
+}
+#other-modes {
+    position: absolute;
+    width: 160px;
+    background: #000;
+    display: none;
+    cursor: pointer;
+}
+#other-modes a {
+    display: block;
+    padding: 8px 15px;
+}
 #left-bar {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	height: 100%;
-	width: 40px;
-	background: black;
-	z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 40px;
+    background: #000;
+    z-index: -1;
 }
-
 #right-bar {
-	position: fixed;
-	top: 0px;
-	right: 0px;
-	height: 100%;
-	width: 40px;
-	background: black;
-	z-index: -2;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 40px;
+    background: #000;
+    z-index: -2;
 }
-
-#bottom-bar { /*overwrite common.css*/
-	position: fixed;
-	bottom: 0px;
-	box-sizing: border-box;
-	-moz-box-sizing:border-box; /* Firefox */
-	width: 100%;
+#bottom-bar {
+    position: fixed;
+    z-index: -1;
+    bottom: 0;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    width: 100%;
 }
-
 #speed-control {
-	position: fixed;
-	left: 40px;
-	bottom: 15px;
-	color: white;
-	font-size: 11px;
-	line-height: 100%;
+    position: fixed;
+    left: 40px;
+    bottom: 15px;
+    color: #fff;
+    font-size: 11px;
+    line-height: 100%;
 }
-	#speed-control .ui-slider {
-		position: relative;
-		display: inline-block;
-		margin: 0px 10px;
-		border-left: 5px solid #777;
-		border-right: 5px solid #777;
-		background-color: #777;
-		height: 6px;
-		width: 70px;
-	}
-		#speed-control .ui-slider-handle {
-			position: absolute;
-			margin-left: -5px;
-			border: none;
-			outline: none;
-			background-color: white;
-			height: 6px;
-			width: 10px;
-		}
-
+#speed-control .ui-slider {
+    position: relative;
+    display: inline-block;
+    margin: 0 10px;
+    border-left: 5px solid #777;
+    border-right: 5px solid #777;
+    background-color: #777;
+    height: 6px;
+    width: 60px;
+}
+#speed-control .ui-slider-handle {
+    position: absolute;
+    margin-left: -5px;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    height: 6px;
+    width: 10px;
+}
 #media-controls {
-
 }
-	.media-control-button {
-		cursor: pointer;
-		position: fixed;
-		opacity: 0.75;
-	}
-		.media-control-button:hover {
-			opacity: 1.0;
-		}
-		.media-control-button img {
-			display: inline-block;
-		}
-	#go-to-end {
-		bottom: 10px;
-		left: 50%;
-		margin-left: -205px; /*20px space*/
-	}
-	#next {
-		bottom: 10px;
-		left: 50%;
-		margin-left: -237px;
-	}
-	#pause, #play {
-		bottom: 8px;
-		left: 50%;
-		margin-left: -273px;
-		opacity: 1.0;
-	}
-	#previous {
-		bottom: 10px;
-		left: 50%;
-		margin-left: -305px;
-	}
-	#go-to-beginning {
-		bottom: 10px;
-		left: 50%;
-		margin-left: -335px;
-	}
-	#stop {
-		bottom: 10px;
-		left: 50%;
-		margin-left: 195px;
-		opacity: 1.0;
-	}
-	#progress-bar.ui-slider {
-		bottom: 17px;
-		left: 50%;
-		margin-left: -175px;
-		background-color: #777;
-		height: 6px;
-		width: 350px;
-		opacity: 1.0;
-	}
-		#progress-bar .ui-slider-handle {
-			position: absolute;
-			border: none;
-			outline: none;
-			background-color: #fff;
-			height: 6px;
-			width: 1px;
-		}
-		#progress-bar .ui-slider-range {
-			position: absolute;
-			height: 6px;
-		}
-
+.media-control-button {
+    cursor: pointer;
+    position: fixed;
+    opacity: 0.75;
+}
+.media-control-button:hover {
+    opacity: 1;
+}
+.media-control-button img {
+    display: inline-block;
+}
+#go-to-end {
+    bottom: 10px;
+    left: 50%;
+    margin-left: -175px;
+}
+#next {
+    bottom: 10px;
+    left: 50%;
+    margin-left: -207px;
+}
+#pause,
+#play {
+    bottom: 8px;
+    left: 50%;
+    margin-left: -243px;
+    opacity: 1;
+}
+#previous {
+    bottom: 10px;
+    left: 50%;
+    margin-left: -275px;
+}
+#go-to-beginning {
+    bottom: 10px;
+    left: 50%;
+    margin-left: -305px;
+}
+#stop {
+    bottom: 10px;
+    left: 50%;
+    margin-left: 195px;
+    opacity: 1;
+}
+#progress-bar.ui-slider {
+    bottom: 17px;
+    left: 50%;
+    margin-left: -150px;
+    background-color: #777;
+    height: 6px;
+    width: 350px;
+    opacity: 1;
+}
+#progress-bar .ui-slider-handle {
+    position: absolute;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    height: 6px;
+    width: 5px;
+}
+#progress-bar .ui-slider-range {
+    position: absolute;
+    height: 6px;
+}
 #viz {
-	width: 100%;
-	text-align: center;
-	overflow: hidden;
-	padding-top: 20px;
-	-webkit-user-select: none;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    padding-top: 10px;
+    -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
 }
-
-.execAction { cursor: pointer; }
-	.execAction p:hover { background: black; color: white; }
-
+.execAction {
+    cursor: pointer;
+}
+.execAction p:hover {
+    background: #000;
+    color: #fff;
+}
+.menu-highlighted {
+    font-weight: 700;
+    text-decoration: underline;
+}
 .panel {
-	position: fixed;
-	color: white;
-	width: 0px;
-	overflow: hidden;
-	background: #777;
-	white-space: nowrap;
+    position: fixed;
+    color: #fff;
+    width: 0;
+    overflow: hidden;
+    background: #777;
+    white-space: nowrap;
 }
-	.panel-hide { position: fixed; cursor: pointer; background: #777; }
-	
+.panel-hide {
+    position: fixed;
+    cursor: pointer;
+    background: #777;
+}
 #current-action {
-	bottom: 320px;
-	right: 60px;
-	width: auto;
-	display: none;
-	background: #eee;
+    bottom: 320px;
+    right: 60px;
+    width: 400px;
+    display: block;
+    background: 0 0;
+    overflow: normal;
+    white-space: normal;
+    text-align: right;
+    color: #000;
+    font-weight: 700;
+    font-size: 20px;
 }
-	#current-action p{ color: black; font-weight: bold; font-size: 20px; }
-	
 #actions {
-	bottom: 60px;
-	left: 43px;
+    bottom: 60px;
+    left: 43px;
 }
-	#actions p { padding: 5px 10px; cursor: pointer; }
-		#actions p:hover { background: black; color: white;}
-	#actions p:first-of-type { padding-top: 10px; }
-	#actions p:last-of-type { padding-bottom: 10px; }
-	#actions-hide {
-		bottom: 60px;
-		left: 0px;
-		padding-left: 14px;
-		padding-right: 15px;
-	}
-	
+#actions p {
+    padding: 5px 10px;
+    cursor: pointer;
+}
+#actions {
+    color: #fff;
+}
+#actions p:hover {
+    background: #000;
+    color: #fff;
+}
+#actions p:first-of-type {
+    padding-top: 10px;
+}
+#actions p:last-of-type {
+    padding-bottom: 10px;
+}
+#actions-hide {
+    bottom: 60px;
+    left: 0;
+    padding-left: 14px;
+    padding-right: 15px;
+}
+.action-menu-pullout {
+    display: none;
+    position: fixed;
+}
+.action-menu-pullout input {
+    background: #000;
+    color: #fff;
+}
+.new-menu-option {
+    margin-left: 3px;
+}
+.err {
+    color: red;
+    margin-left: 6px;
+}
+.rating-star {
+    font-size: 25px;
+    font-weight: 700;
+}
 #status {
-	bottom: 255px;
-	right: 43px;
-	height: 54px;
-	white-space: normal;
+    bottom: 255px;
+    right: 43px;
+    height: 54px;
+    white-space: normal;
 }
-	#status p { padding: 10px; }
-	#status-hide {
-		bottom: 255px;
-		right: 0px;
-		padding: 19px 14px 19px 15px;
-		transform: rotate(180deg);
-		-ms-transform: rotate(180deg); /* IE 9 */
-		-webkit-transform: rotate(180deg); /* Safari and Chrome */
-		-o-transform: rotate(180deg); /* Opera */
-		-moz-transform: rotate(180deg); /* Firefox */
-	}
-	
+#status p {
+    padding: 10px;
+}
+#status-hide {
+    bottom: 255px;
+    right: 0;
+    padding: 19px 14px 19px 15px;
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+}
 #codetrace {
-	bottom: 60px;
-	right: 43px;
-	height: 192px;
-	font-family: "Courier New", Courier, monospace;
+    bottom: 60px;
+    right: 43px;
+    height: 192px;
+    font-family: courier new, Courier, monospace;
 }
-	#codetrace p { padding: 5px 10px; }
-		#codetrace p.highlighted { background: black; }
-	#codetrace-hide {
-		bottom: 60px;
-		right: 0px;
-		padding: 88px 14px 88px 15px;
-		transform: rotate(180deg);
-		-ms-transform: rotate(180deg); /* IE 9 */
-		-webkit-transform: rotate(180deg); /* Safari and Chrome */
-		-o-transform: rotate(180deg); /* Opera */
-		-moz-transform: rotate(180deg); /* Firefox */
-	}
-	
+#codetrace p {
+    padding: 5px 10px;
+}
+#codetrace p.highlighted {
+    background: #000;
+}
+#codetrace-hide {
+    bottom: 60px;
+    right: 0;
+    padding: 88px 14px 88px 15px;
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+}
 .rotateRight {
-	transform: rotate(180deg);
-	-ms-transform: rotate(180deg); /* IE 9 */
-	-webkit-transform: rotate(180deg); /* Safari and Chrome */
-	-o-transform: rotate(180deg); /* Opera */
-	-moz-transform: rotate(180deg); /* Firefox */
-				
-	/* if you want to do this move with animate use transition */
-	transition: .5s;
-	-moz-transition: .5s; /* Firefox 4 */
-	-webkit-transition: .5s; /* Safari and Chrome */
-	-o-transition: .5s; /* Opera */	
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    transition: 0.5s;
+    -moz-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
 }
 .rotateLeft {
-	transform: rotate(0deg);
-	-ms-transform: rotate(0deg); /* IE 9 */
-	-webkit-transform: rotate(0deg); /* Safari and Chrome */
-	-o-transform: rotate(0deg); /* Opera */
-	-moz-transform: rotate(0deg); /* Firefox */
-				
-	/* if you want to do this move with animate use transition */
-	transition: .5s;
-	-moz-transition: .5s; /* Firefox 4 */
-	-webkit-transition: .5s; /* Safari and Chrome */
-	-o-transition: .5s; /* Opera */	
+    transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    transition: 0.5s;
+    -moz-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
 }
-
-/*tutorial stuff*/
-.tutorial-dialog {
-	position: fixed;
-	background: black;
-	color: white;
-	padding: 12px;
-	border-radius: 3px;
-	display: none;
-	line-height: 150%;
+.electure-dialog {
+    position: fixed;
+    background: #000;
+    color: #fff;
+    padding: 12px 12px 24px;
+    border-radius: 3px;
+    display: none;
+    line-height: 150%;
+    z-index: 9999;
 }
-	.tutorial-dialog:before {
-		content: " ";
-		position: absolute;
-		height: 0px;
-		width: 0px;
-		border-style:solid;
-		border-width:10px;
-		border-color: transparent;
-	}
-	.tutorial-next {
-		position: absolute;
-		bottom: -10px;
-		right: -10px;
-		padding: 3px 8px;
-		background: #999;
-		color: white;
-		cursor: pointer;
-		border-radius: 2px;
-	}
-		.tutorial-next img {
-			display: inline-block;
-			height: 9px;
-			margin-left: 8px;
-		}
+.electure-dialog:before {
+    content: " ";
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-style: solid;
+    border-width: 10px;
+    border-color: transparent;
+}
+.electure-end {
+    position: absolute;
+    bottom: -12px;
+    right: -10px;
+    padding: 3px 8px;
+    background: #999;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 2px;
+}
+.electure-print {
+    position: absolute;
+    bottom: -12px;
+    left: -10px;
+    padding: 3px 8px;
+    background: #999;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 2px;
+}
+#electure-dropdown {
+    position: absolute;
+    top: -25px;
+    left: 50%;
+    margin-left: -30%;
+    width: 60%;
+    padding: 8px 8px 0;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 2px;
+}
+#popup {
+    width: 600px;
+    height: 480px;
+    background-color: #ccc;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10000;
+    margin: auto;
+}
+#popup-content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    padding: 10px;
+    box-shadow: -1px 1px 3px #222;
+}
+#hide-popup {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    padding: 1px 5px;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: green;
+}
+#overlay {
+    background-color: #000;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 8000;
+}
