--- a/Graph/css/viz-1.0.1.css
+++ b/Graph/css/viz-1.0.1.css
@@ -404,3 +404,23 @@ html {
     right: 0;
     z-index: 8000;
 }
+
+#myTextarea {
+    display: none;
+    height: 530px;
+    width: 700px;
+    margin: 0 auto;
+    margin-left: -350px;
+    margin-top: -215px;
+}
+
+.overlays {
+    display: none;
+    background: #eee;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1003;
+    overflow-x: hidden;
+    overflow-y: hidden
+}
