--- a/Graph/css/viz-1.0.1.css
+++ b/Graph/css/viz-1.0.1.css
@@ -462,8 +462,8 @@ html {
 #uploader {
     font-size: 15px;
     display: none;
-    height: 450px;
-    width: 665px;
+    height: 290px;
+    width: 700px;
     margin: 0 auto;
     margin-left: -335px;
     margin-top: -200px;
@@ -471,9 +471,14 @@ html {
 
 #uploadFile {
     display: none;
-    height: 530px;
-    width: 300px;
+    height: 300px;
+    width: 700px;
     margin: 0 auto;
     margin-left: -350px;
     margin-top: -215px;
+}
+
+#infoUploadFile {
+    color: #000;
+    text-align: center;
 }
